[gd_scene load_steps=6 format=3 uid="uid://dbkmma3hl2b7f"]

[ext_resource type="Script" path="res://Scripts/enemyBarracks.gd" id="1_o0cv4"]
[ext_resource type="PackedScene" uid="uid://0c6jslptgrnr" path="res://Scenes/UI/HealthBar.tscn" id="2_oxihp"]

[sub_resource type="CylinderMesh" id="CylinderMesh_r87el"]
top_radius = 0.0
bottom_radius = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_gbyri"]
points = PackedVector3Array(0, 1, 0, 0.0978857, -1, 0.995106, 0.194988, -1, 0.980619, 0.290133, -1, 0.95693, 0.382537, -1, 0.923845, 0.471222, -1, 0.881754, 0.555403, -1, 0.831441, 0.634299, -1, 0.772905, 0.424237, -0.200078, 0.424237, 0.772905, -1, 0.634299, 0.831441, -1, 0.555403, 0.881754, -1, 0.471222, 0.923845, -1, 0.382537, 0.95693, -1, 0.290133, 0.980619, -1, 0.194988, 0.995106, -1, 0.0978857, 1, -1, 0, 0.597103, -0.200078, -0.0589272, 0.980619, -1, -0.195184, 0.95693, -1, -0.290329, 0.923845, -1, -0.382733, 0.881754, -1, -0.471417, 0.705364, -0.600039, -0.377251, 0.831441, -1, -0.555599, 0.463782, -0.200078, -0.380775, 0.424237, -0.200078, -0.424432, 0.380579, -0.200078, -0.463978, 0.555403, -1, -0.831637, 0.377056, -0.600039, -0.70556, 0.382537, -1, -0.924041, 0.116092, 0.199883, -0.382929, 0.194988, -1, -0.980814, 0.0587314, -0.200078, -0.597298, 0, 0.199883, -0.400157, -0.0589272, -0.200078, -0.597298, -0.195184, -1, -0.980814, -0.116288, 0.199883, -0.382929, -0.382733, -1, -0.924041, -0.377251, -0.600039, -0.70556, -0.188724, 0.199883, -0.35278, -0.111198, 0.599843, -0.166406, -0.127056, 0.599843, -0.154659, -0.141543, 0.599843, -0.141543, -0.154659, 0.599843, -0.127056, -0.166406, 0.599843, -0.111198, -0.35278, 0.199883, -0.188724, -0.70556, -0.600039, -0.377251, -0.924041, -1, -0.382733, -0.382929, 0.199883, -0.116288, -0.980814, -1, -0.195184, -0.597298, -0.200078, -0.0589272, -0.400157, 0.199883, 0, -0.597298, -0.200078, 0.0587314, -0.980814, -1, 0.194988, -0.382929, 0.199883, 0.116092, -0.924041, -1, 0.382537, -0.70556, -0.600039, 0.377056, -0.831637, -1, 0.555403, -0.463978, -0.200078, 0.380579, -0.424432, -0.200078, 0.424237, -0.380775, -0.200078, 0.463782, -0.555599, -1, 0.831441, -0.377251, -0.600039, 0.705364, -0.471417, -1, 0.881754, -0.382733, -1, 0.923845, -0.290329, -1, 0.95693, -0.195184, -1, 0.980619, -0.0589272, -0.200078, 0.597103, 0, -1, 1, 0.70693, -1, 0.70693, 0.995106, -1, -0.0980814, 0.772905, -1, -0.634495, 0.70693, -1, -0.707126, 0.634299, -1, -0.773101, 0.471222, -1, -0.88195, 0.290133, -1, -0.957126, 0.0978857, -1, -0.995301, 0, -0.600039, -0.800117, -0.0980814, -1, -0.995301, -0.290329, -1, -0.957126, -0.471417, -1, -0.88195, -0.555599, -1, -0.831637, -0.380775, -0.200078, -0.463978, -0.424432, -0.200078, -0.424432, -0.463978, -0.200078, -0.380775, -0.831637, -1, -0.555599, -0.88195, -1, -0.471417, -0.957126, -1, -0.290329, -0.995301, -1, -0.0980814, -0.800117, -0.600039, 0, -0.995301, -1, 0.0978857, -0.957126, -1, 0.290133, -0.88195, -1, 0.471222, -0.773101, -1, 0.634299, -0.707126, -1, 0.70693, -0.634495, -1, 0.772905, -0.0980814, -1, 0.995106, 0, -1, -1, -0.634495, -1, -0.773101, -0.707126, -1, -0.707126, -0.773101, -1, -0.634495, -1, -1, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_vnwvh"]
viewport_path = NodePath("SubViewport")

[node name="EnemyBarracks" type="StaticBody3D" groups=["enemybuilding"]]
script = ExtResource("1_o0cv4")
health = 800

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_r87el")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_gbyri")

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.56531)

[node name="HealthDisplay" type="Sprite3D" parent="."]
transform = Transform3D(0.46, 0, 0, 0, 0.462, 0, 0, 0, 0.49, 0, 1.26682, 0)
billboard = 1
texture = SubResource("ViewportTexture_vnwvh")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="HealthBar" parent="SubViewport" instance=ExtResource("2_oxihp")]
value = 0.0

[connection signal="timeout" from="WaveTimer" to="." method="_on_timer_timeout"]
